TAG: pubmed2geneload-6-0-12-?
DATE: 02/07/2018
STAFF: lec
CHANGES:
TR12662/GMC/add autosequence

TAG: pubmed2geneload-6-0-11-4
TAG: pubmed2geneload-6-0-11-3
TAG: pubmed2geneload-6-0-11-2
TAG: pubmed2geneload-6-0-11-1
DATE: 10/04/2017
STAFF: sc
CHANGES: Initial tag TR12250